--- a/stylesheets/layout/_about.scss
+++ b/stylesheets/layout/_about.scss
@@ -2,7 +2,18 @@
 @use "../base" as *;
 
 .about{
-    padding:5em;
+    padding:2em;
+    h1{
+        font-family:map-get($font,'secondary');
+        text-align: center;
+        font-size:7vw;
+        position: relative;
+        &::before{
+            @include stylesForPseudoElement($content:"",$width:30%,$height:0.4rem,$top:100%,$left:50%);
+            transform: translate(-50%,-50%);
+            background-color: map-get($colors,'secondary');
+        }
+    }
 }
 
 
@@ -39,11 +50,14 @@
   }
 }
     
-  @media(max-width:352px){
-    .about{
-      padding:2em;
+    @media(max-width:366px){
+      .container{
+        font-size:10vw;
+      }
+      .about h1{
+        font-size:10vw;
+        &::before{
+         height:0.2rem;
+      }
+      }
     }
-    .container{
-      font-size:10vw;
-    }
-  }
