--- a/stylesheets/layout/_navbar.scss
+++ b/stylesheets/layout/_navbar.scss
@@ -31,7 +31,7 @@
     }
 }
         
-@media (max-width:352px){
+@media (max-width:406px){
     h2 span{
         font-size:10vw;
     }
