--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -123,6 +123,11 @@ img {
   color: #000;
 }
 
+@media (max-width: 366px) {
+  .btn {
+    font-size: 1.2rem;
+  }
+}
 .input {
   background-color: #0a0a0a;
   font-size: 1.3rem;
@@ -281,6 +286,9 @@ img {
   margin-right: 0.9em;
   width: 100%;
 }
+.form__email {
+  width: 100%;
+}
 
 @media (max-width: 820px) {
   .form {
@@ -301,6 +309,7 @@ img {
   .footer__heading {
     font-size: 7vw;
     line-height: 1.1;
+    text-align: left;
   }
   .footer__data {
     display: flex;
@@ -322,6 +331,11 @@ img {
   .form__name {
     margin-right: 0;
     margin-bottom: 0.9em;
+  }
+}
+@media (max-width: 366px) {
+  .footer__heading {
+    font-size: 11vw;
   }
 }
 .header {
@@ -366,6 +380,14 @@ img {
     font-size: 1.4rem;
   }
 }
+@media (max-width: 366px) {
+  .short__links li {
+    margin: 1.3em 0.4em;
+  }
+  .short__links li a .fab, .short__links li .fas {
+    font-size: 1.2rem;
+  }
+}
 .navbar {
   height: 100vh;
   padding: 6em;
@@ -399,13 +421,29 @@ img {
     line-height: 1.3;
   }
 }
-@media (max-width: 352px) {
+@media (max-width: 406px) {
   h2 span {
     font-size: 10vw;
   }
 }
 .about {
-  padding: 5em;
+  padding: 2em;
+}
+.about h1 {
+  font-family: "hansonbold";
+  text-align: center;
+  font-size: 7vw;
+  position: relative;
+}
+.about h1::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 30%;
+  height: 0.4rem;
+  transform: translate(-50%, -50%);
+  background-color: #fafafa;
 }
 
 .container,
@@ -438,13 +476,16 @@ img {
     font-size: 7vw;
   }
 }
-@media (max-width: 352px) {
-  .about {
-    padding: 2em;
-  }
-
+@media (max-width: 366px) {
   .container {
     font-size: 10vw;
+  }
+
+  .about h1 {
+    font-size: 10vw;
+  }
+  .about h1::before {
+    height: 0.2rem;
   }
 }
 .projects {
